# vox-data-platform

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_analise_conversas.ipynb  01_analise_exploratoria.ipynb  TUTORIAL_ANALISE.md
scripts/: db_connect.py  etl_ingestao.py
tests/: test_conexao.py
